--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "name": "twbot",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "main": "twitch-bot.js",
   "scripts": {
     "start": "node twitch-bot.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": ["twitch", "bot", "chat", "ai", "gemini", "riddles"],
   "author": "",
   "license": "ISC",
-  "description": "Twitch chat bot - köszön az első üzenetírónak",
+  "description": "Twitch chat bot - AI válaszok és találós kérdés játék",
   "dependencies": {
-    "groq": "^3.84.0",
-    "groq-sdk": "^0.19.0",
+    "@google/generative-ai": "^0.24.0",
+    "node-fetch": "^2.7.0",
     "tmi.js": "^1.8.5"
   }
 }
